--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "---",
   "main": "server.js",
   "scripts": {
-    "test": "node server.js",
+    "server": "node server.js",
     "start": "node server.js"
   },
   "repository": {
@@ -15,10 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "fs": "^0.0.1-security",
-    "inquirer": "^9.2.3",
     "net": "^1.0.2",
-    "path": "^0.12.7",
-    "select-files-cli": "0.0.4",
-    "tqdm": "^2.0.3"
+    "path": "^0.12.7"
   }
 }
